# tau2-mermaid

./: .env.example  .gitignore  .gitmodules  .mcp.json  README.md  base_gpt5nano_reasoning_high_task_trial_matrix.csv  base_gpt5nano_reasoning_high_task_trial_matrix_with_pass_hat_k.csv  main.py  mermaid_reasoning_high_task_trial_matrix.csv  mermaid_reasoning_high_task_trial_matrix_with_pass_hat_k.csv  mermaid_reasoning_medium_task_trial_matrix.csv  mermaid_reasoning_medium_task_trial_matrix_with_pass_hat_k.csv  pyproject.toml
agent/: __init__.py  (+17 more)
tau2-1xn/benchmark/: README.md  pyproject.toml  run_eval.py
tau2-1xn/benchmark/scenarios/: index.json
tau2-1xn/benchmark/scenarios/scenario_01_order_cancellation/: graph.mermaid  graph_prose.md  metadata.json
tau2-1xn/benchmark/scenarios/scenario_01_order_cancellation/test_cases/: test_01.json
tau2-1xn/benchmark/scenarios/scenario_02_password_reset/: graph.mermaid  graph_prose.md  metadata.json
tau2-1xn/benchmark/scenarios/scenario_03_appointment_booking/: graph.mermaid  graph_prose.md  metadata.json
tau2-1xn/benchmark/scenarios/scenario_04_leave_request/: graph.mermaid  graph_prose.md  metadata.json
tau2-1xn/benchmark/scenarios/scenario_05_return_exchange/: graph.mermaid  graph_prose.md  metadata.json
tau2-1xn/benchmark/scenarios/scenario_06_it_ticket_routing/: graph.mermaid  graph_prose.md  metadata.json
tau2-1xn/benchmark/scenarios/scenario_07_insurance_claim_type/: graph.mermaid  graph_prose.md  metadata.json
tau2-1xn/benchmark/scenarios/scenario_08_hr_onboarding_docs/: graph.mermaid  graph_prose.md  metadata.json
tau2-1xn/benchmark/scenarios/scenario_09_insurance_claim_investigation/: graph.mermaid  graph_prose.md  metadata.json
tau2-1xn/benchmark/scenarios/scenario_10_customer_complaint_escalation/: graph.mermaid  graph_prose.md  metadata.json
tau2-1xn/benchmark/scenarios/scenario_11_tech_support_no_service/: graph.mermaid  graph_prose.md  metadata.json
tau2-1xn/benchmark/scenarios/scenario_12_tech_support_mobile_data/: graph.mermaid  graph_prose.md  metadata.json
tau2-1xn/benchmark/scenarios/scenario_13_tech_support_mms/: graph.mermaid  graph_prose.md  metadata.json
tau2-1xn/benchmark/src/graph_harness/: __init__.py  agent.py  conditions.py  eval_utils.py  harness.py  logging_config.py
tau2-1xn/benchmark/tests/: test_harness.py
(+1583 files in other folders)
