[project]
name = "graph-traversal-benchmark"
version = "0.1.0"
description = "Graph traversal ablation benchmark: prose vs mermaid vs mermaid+harness"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.65.0",
    "logfire[litellm]>=0.50.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
